--- a/index.html
+++ b/index.html
@@ -9,6 +9,30 @@
     <script src="js/main.js"></script>
 </head>
 <body>
-    
+    <button onclick="dealOut();">
+        Iniciar Partida
+    </button>
+    <div id="tableg">
+        <div id="handdealer">
+
+        </div>
+
+        <div id="mssg">
+
+        </div>
+
+        <div id="handuser">
+            <div id="cardsuser">
+            </div>
+            <div id="control-desition">
+                <button>
+                    Me Planto
+                </button>
+                <button>
+                    Robo
+                </button>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
