--- a/index.html
+++ b/index.html
@@ -8,16 +8,15 @@
     <link rel="stylesheet" type="text/css" media="screen" href="css/main.css" />
     <script src="js/main.js"></script>
 </head>
-<body>
+<body id="fondo">
     <button onclick="dealOut();">
         Iniciar Partida
     </button>
-    <div id="tableg">
-        <div id="handdealer">
 
-        </div>
+    <!-- <div id="tableg"> -->
+    <div id="handdealer">  </div>
 
-        <div id="mssg">
+    <div id="mssg">   </div>
 
         </div>
 
