index de repartir las cartas

--- a/index.html
+++ b/index.html
@@ -18,20 +18,19 @@
 
     <div id="mssg">   </div>
 
-        </div>
-
-        <div id="handuser">
-            <div id="cardsuser">
-            </div>
-            <div id="control-desition">
-                <button>
-                    Me Planto
-                </button>
-                <button>
-                    Robo
-                </button>
-            </div>
-        </div>
+    <div id="control-desition">
+        <button onclick="robarUsuario();">
+            Robo
+        </button>
+        <button >
+            Me Planto
+        </button>
+        
     </div>
+
+    <div id="handuser">
+        <div id="cardsuser">  </div>
+    </div>
+    <!-- </div> -->
 </body>
 </html>
