Fix #3 Ya dice quien gano el juego

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <button onclick="robarUsuario();">
             Robo
         </button>
-        <button >
+        <button onclick="mePlanto();">
             Me Planto
         </button>
         
